# Test-

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: feature_request.yml
.github/workflows/: build.yml  run-tests.yml
docs/: index.md
include/application/clients/: GitHubAPIClient.hpp
include/application/services/: GitHubService.hpp
include/domain/entities/: Repository.hpp
include/domain/interfaces/: IGitHubService.hpp  IHttpClient.hpp  IRepositoryGateway.hpp
include/domain/use_cases/: ListRepositories.hpp
include/infrastructure/clients/: CurlHttpClient.hpp  GitHubAPIClient.hpp
include/infrastructure/gateways/: RepositoryGateway.hpp
include/presentation/cli/: GitHubCLI.hpp
src/: main.cpp
src/application/clients/: GitHubAPIClient.cpp
src/application/services/: GithubService.cpp
src/domain/use_cases/: ListRepository.cpp
src/infrastructure/clients/: CurlHttpClient.cpp  GithubAPIClient.cpp
src/infrastructure/gateways/: RepositoryGateway.cpp
src/presentation/: GitHubCLI.cpp
tests/: CMakeLists.txt
tests/initialize/: GitHubAPIClientInit.hpp
tests/mocks/: MockGitHubService.hpp  MockHttpClient.hpp  MockRepositoryGateway.hpp
tests/unit/application/clients/: GitHubAPIClientTests.cpp
tests/unit/application/services/: GitHubServiceTests.cpp
tests/unit/infrastructure/clients/: GitHubAPIClientTests.cpp
tests/unit/presentation/: GitHubCLITests.cpp
